# FastA_Menu_project

./: .env.template  .gitignore  Dockerfile  README.md  alembic.ini  config.py  main.py  pyproject.toml  requirements.txt
api/: schemas.py
api/endpoints/: dish.py  menu.py  submenu.py
database/: db.py  models.py
migrations/: env.py
migrations/versions/: 2501867bfddd_creating_project_tables.py  4d3d27258039_switching_models_from_uuid_to_integer.py  d15de74c840d_initial_migration.py  df1dde998e66_migration_for_issue_18.py
tests/: conftest.py  test_dish.py  test_menu.py  test_submenu.py
